mule-user-guide/v/3.7/_toc.adoc
// Mule Runtime 3.7 TOC


*  link:/mule-user-guide/v/3.7/index[骡子运行时间]
**  link:/mule-user-guide/v/3.7/mule-fundamentals[骡子基础]
***  link:/getting-started/build-a-hello-world-application[构建一个Hello World Mule应用程序]
***  link:/mule-user-guide/v/3.7/mule-concepts[骡子概念]
****  link:/mule-user-guide/v/3.7/elements-in-a-mule-flow[骡子流中的元素]
*****  link:/mule-user-guide/v/3.7/mule-connectors[Mule连接器]
*****  link:/mule-user-guide/v/3.7/mule-components[Mule组件]
*****  link:/mule-user-guide/v/3.7/mule-transformers[骡变形金刚]
*****  link:/mule-user-guide/v/3.7/mule-filters-scopes-and-routers[Mule过滤器范围和路由器]
*****  link:/mule-user-guide/v/3.7/mule-exception-strategies[骡子例外策略]
***  link:/mule-user-guide/v/3.7/mule-message-structure[Mule消息结构]
***  link:/mule-user-guide/v/3.7/message-state[消息状态]
***  link:/mule-user-guide/v/3.7/global-elements[全球元素]
***  link:/mule-user-guide/v/3.7/mule-application-architecture[Mule应用程序架构]
***  link:/mule-user-guide/v/3.7/flows-and-subflows[流量和子流量]
****  link:/mule-user-guide/v/3.7/flow-architecture-advanced-use-case[Flow Architecture高级用例]
***  link:/mule-user-guide/v/3.7/mule-security[安全在骡子]
**  link:/mule-user-guide/v/3.7/installing[安装]
***  link:/mule-user-guide/v/3.7/hardware-and-software-requirements[硬件和软件要求]
***  link:/mule-user-guide/v/3.7/downloading-and-starting-mule-esb[下载并启动Mule ESB]
***  link:/mule-user-guide/v/3.7/installing-an-enterprise-license[安装企业许可证]
***  link:/mule-user-guide/v/3.7/extending-mule[延长骡子]
***  link:/mule-user-guide/v/3.7/third-party-software-in-mule[第三方软件Mule]
**  link:/mule-user-guide/v/3.7/developing[发展]
***  link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint连接器]
****  link:/mule-user-guide/v/3.7/installing-connectors[安装连接器]
****  link:/mule-user-guide/v/3.7/connector-configuration-reference[连接器配置参考]
****  link:/mule-user-guide/v/3.7/working-with-multiple-versions-of-connectors[使用多个版本的连接器]
****  link:/mule-user-guide/v/3.7/using-a-connector-to-access-an-oauth-api[使用连接器访问OAuth API]
****  link:/mule-user-guide/v/3.7/auto-paging-in-anypoint-connectors[在Anypoint连接器中自动寻呼]
****  link:/mule-user-guide/v/3.7/ajax-connector[Ajax连接器]
****  link:/mule-user-guide/v/3.7/amazon-s3-connector[Amazon S3连接器]
****  link:/mule-user-guide/v/3.7/amazon-sns-connector[亚马逊SNS连接器]
****  link:/mule-user-guide/v/3.7/amazon-sqs-connector[Amazon SQS连接器]
****  link:/mule-user-guide/v/3.7/amqp-connector[AMQP连接器]
*****  link:/mule-user-guide/v/3.7/amqp-connector-examples[AMQP连接器示例]
*****  link:/mule-user-guide/v/3.7/amqp-connector-reference[AMQP连接器参考]
****  link:/mule-user-guide/v/3.7/cmis-connector[CMIS连接器]
****  link:/mule-user-guide/v/3.7/cloudhub-connector[CloudHub连接器]
****  link:/mule-user-guide/v/3.7/database-connector[数据库连接器]
*****  link:/mule-user-guide/v/3.7/database-connector-examples[数据库连接器示例]
*****  link:/mule-user-guide/v/3.7/database-connector-reference[数据库连接器参考]
****  link:/mule-user-guide/v/3.7/dotnet-connector-guide[DotNet连接器指南]
*****  link:/mule-user-guide/v/3.7/dotnet-connector-user-guide[DotNet连接器用户指南]
*****  link:/mule-user-guide/v/3.7/anypoint-extensions-for-visual-studio[适用于Visual Studio的Anypoint扩展]
*****  link:/mule-user-guide/v/3.7/dotnet-connector-migration-guide[DotNet连接器迁移指南]
*****  link:/mule-user-guide/v/3.7/dotnet-connector-faqs[DotNet连接器常见问题]
****  link:/mule-user-guide/v/3.7/file-connector[文件连接器]
****  link:/mule-user-guide/v/3.7/ftp-connector[FTP连接器]
****  link:/mule-user-guide/v/3.7/generic-connector[通用连接器]
****  link:/mule-user-guide/v/3.7/hdfs-connector[HDFS连接器]
****  link:/mule-user-guide/v/3.7/http-connector[HTTP连接器]
*****  link:/mule-user-guide/v/3.7/http-listener-connector[HTTP侦听器连接器]
*****  link:/mule-user-guide/v/3.7/http-request-connector[HTTP请求连接器]
*****  link:/mule-user-guide/v/3.7/authentication-in-http-requests[HTTP请求中的身份验证]
*****  link:/mule-user-guide/v/3.7/http-connector-reference[HTTP连接器参考]
*****  link:/mule-user-guide/v/3.7/tls-configuration[TLS配置]
*****  link:/mule-user-guide/v/3.7/migrating-to-the-new-http-connector[迁移到新的HTTP连接器]
****  link:/mule-user-guide/v/3.7/http-connector-deprecated[HTTP连接器 - 已弃用]
****  link:/mule-user-guide/v/3.7/imap-connector[IMAP连接器]
****  link:/mule-user-guide/v/3.7/jdbc-connector[JDBC连接器]
****  link:/mule-user-guide/v/3.7/ldap-connector[LDAP连接器]
****  link:/mule-user-guide/v/3.7/marketo-connector[Marketo连接器]
****  link:/mule-user-guide/v/3.7/microsoft-dynamics-ax-2012-connector[Microsoft Dynamics AX 2012连接器]
****  link:/mule-user-guide/v/3.7/microsoft-dynamics-crm-connector[Microsoft Dynamics CRM连接器]
****  link:/mule-user-guide/v/3.7/microsoft-service-bus-connector[Microsoft Service Bus连接器]
*****  link:/mule-user-guide/v/3.7/microsoft-service-bus-connector-faq[Microsoft Service Bus连接器常见问题]
****  link:/mule-user-guide/v/3.7/microsoft-sharepoint-2013-connector[Microsoft SharePoint 2013连接器]
****  link:/mule-user-guide/v/3.7/microsoft-sharepoint-2010-connector[Microsoft SharePoint 2010连接器]
****  link:/mule-user-guide/v/3.7/mongodb-connector[MongoDB连接器]
*****  link:/mule-user-guide/v/3.7/mongodb-connector-migration-guide[MongoDB连接器4.0.2迁移指南]
****  link:/mule-user-guide/v/3.7/msmq-connector[MSMQ连接器]
****  link:/mule-user-guide/v/3.7/mule-paypal-anypoint-connector[贝宝连接器]
****  link:/mule-user-guide/v/3.7/netsuite-connector[NetSuite连接器]
****  link:/mule-user-guide/v/3.7/netsuite-openair-connector[NetSuite OpenAir连接器]
****  link:/mule-user-guide/v/3.7/oracle-ebs-connector-user-guide[Oracle电子商务套件连接器]
****  link:/mule-user-guide/v/3.7/peoplesoft-connector[PeopleSoft连接器]
****  link:/mule-user-guide/v/3.7/pop3-connector[POP3连接器]
****  link:/mule-user-guide/v/3.7/quartz-connector[石英连接器]
****  link:/mule-user-guide/v/3.7/salesforce-analytics-cloud-connector[Salesforce Analytics云连接器]
****  link:/mule-user-guide/v/3.7/salesforce-connector[Salesforce连接器]
*****  link:/mule-user-guide/v/3.7/salesforce-connector-authentication[Salesforce连接器身份验证]
*****  link:/mule-user-guide/v/3.7/salesforce-connector-reference[Salesforce连接器参考]
*****  link:/mule-user-guide/v/3.7/salesforce-contact-aggregation-example[Salesforce联系人聚合示例]
****  link:/mule-user-guide/v/3.7/sap-connector[SAP连接器]
*****  link:/mule-user-guide/v/3.7/sap-connector-advanced-features[SAP连接器高级功能]
*****  link:/mule-user-guide/v/3.7/sap-connector-troubleshooting[SAP Connector故障排除]
****  link:/mule-user-guide/v/3.7/concur-connector[SAP Concur连接器]
****  link:/mule-user-guide/v/3.7/salesforce-marketing-cloud-connector[Salesforce Marketing Cloud连接器]
****  link:/mule-user-guide/v/3.7/servicenow-connector-5.0[ServiceNow连接器5.x]
*****  link:/mule-user-guide/v/3.7/servicenow-connector-5.0-migration-guide[ServiceNow连接器5.x迁移指南]
****  link:/mule-user-guide/v/3.7/servicenow-connector[ServiceNow连接器4.0]
****  link:/mule-user-guide/v/3.7/servlet-connector[Servlet连接器]
****  link:/mule-user-guide/v/3.7/sftp-connector[SFTP连接器]
****  link:/mule-user-guide/v/3.7/siebel-connector[Siebel连接器]
****  link:/mule-user-guide/v/3.7/successfactors-connector[SuccessFactors连接器]
****  link:/mule-user-guide/v/3.7/twilio-connector[Twilio连接器]
****  link:/mule-user-guide/v/3.7/twitter-connector[Twitter连接器]
****  link:/mule-user-guide/v/3.7/web-service-consumer[Web服务使用者]
*****  link:/mule-user-guide/v/3.7/web-service-consumer-reference[Web服务消费者参考]
****  link:/mule-user-guide/v/3.7/windows-gateway-services-guide[Windows网关服务指南]
****  link:/mule-user-guide/v/3.7/windows-powershell-connector-guide[Windows PowerShell连接器指南]
****  link:/mule-user-guide/v/3.7/wmq-connector[WMQ连接器]
****  link:/mule-user-guide/v/3.7/workday-connector[Workday连接器7.0]
****  link:/mule-user-guide/v/3.7/workday-connector-6.0[Workday Connector 6.0]
*****  link:/mule-user-guide/v/3.7/workday-connector-6.0-migration-guide[Workday Connector 6.0迁移指南]
***  link:/mule-user-guide/v/3.7/components[组件]
****  link:/mule-user-guide/v/3.7/configuring-components[配置组件]
*****  link:/mule-user-guide/v/3.7/configuring-java-components[配置Java组件]
*****  link:/mule-user-guide/v/3.7/developing-components[开发组件]
*****  link:/mule-user-guide/v/3.7/entry-point-resolver-configuration-reference[入口点解析器配置参考]
*****  link:/mule-user-guide/v/3.7/component-bindings[组件绑定]
*****  link:/mule-user-guide/v/3.7/using-interceptors[使用拦截器]
****  link:/mule-user-guide/v/3.7/cxf-component-reference[CXF组件参考]
****  link:/mule-user-guide/v/3.7/echo-component-reference[回声组件参考]
****  link:/mule-user-guide/v/3.7/expression-component-reference[表达组件参考]
****  link:/mule-user-guide/v/3.7/flow-reference-component-reference[流参考组件参考]
****  link:/mule-user-guide/v/3.7/http-static-resource-handler[HTTP静态资源处理程序]
****  link:/mule-user-guide/v/3.7/http-response-builder[HTTP响应生成器]
****  link:/mule-user-guide/v/3.7/invoke-component-reference[调用组件引用]
****  link:/mule-user-guide/v/3.7/java-component-reference[Java组件参考]
****  link:/mule-user-guide/v/3.7/logger-component-reference[记录器组件参考]
*****  link:/mule-user-guide/v/3.7/logging-in-mule[登录Mule]
****  link:/mule-user-guide/v/3.7/rest-component-reference[REST组件参考]
****  link:/mule-user-guide/v/3.7/script-component-reference[脚本组件参考]
*****  link:/mule-user-guide/v/3.7/groovy-component-reference[Groovy组件参考]
*****  link:/mule-user-guide/v/3.7/javascript-component-reference[JavaScript组件参考]
*****  link:/mule-user-guide/v/3.7/python-component-reference[Python组件参考]
*****  link:/mule-user-guide/v/3.7/ruby-component-reference[Ruby组件参考]
***  link:/mule-user-guide/v/3.7/validations-module[验证器]
****  link:/mule-user-guide/v/3.7/building-a-custom-validator[构建自定义验证器]
***  link:/mule-user-guide/v/3.7/filters[过滤器]
****  link:/mule-user-guide/v/3.7/custom-filter[定制过滤器]
****  link:/mule-user-guide/v/3.7/exception-filter[异常过滤器]
****  link:/mule-user-guide/v/3.7/json-schema-validator[JSON模式验证器]
****  link:/mule-user-guide/v/3.7/logic-filter[逻辑滤波器]
****  link:/mule-user-guide/v/3.7/message-filter[消息过滤器]
****  link:/mule-user-guide/v/3.7/message-property-filter[消息属性过滤器]
****  link:/mule-user-guide/v/3.7/regex-filter[正则表达式过滤器]
****  link:/mule-user-guide/v/3.7/schema-validation-filter[模式验证过滤器]
****  link:/mule-user-guide/v/3.7/wildcard-filter[通配符过滤器]
****  link:/mule-user-guide/v/3.7/idempotent-filter[幂等过滤器]
****  link:/mule-user-guide/v/3.7/filter-ref[过滤器参考]
***  link:/mule-user-guide/v/3.7/routers[路由器]
****  link:/mule-user-guide/v/3.7/all-flow-control-reference[所有流量控制参考]
****  link:/mule-user-guide/v/3.7/choice-flow-control-reference[选择流量控制参考]
****  link:/mule-user-guide/v/3.7/scatter-gather[分散 - 集中]
****  link:/mule-user-guide/v/3.7/splitter-flow-control-reference[分流器流量控制参考]
***  link:/mule-user-guide/v/3.7/scopes[领域]
****  link:/mule-user-guide/v/3.7/async-scope-reference[异步范围参考]
****  link:/mule-user-guide/v/3.7/cache-scope[缓存范围]
****  link:/mule-user-guide/v/3.7/foreach[的foreach]
****  link:/mule-user-guide/v/3.7/message-enricher[消息Enricher]
****  link:/mule-user-guide/v/3.7/poll-reference[投票参考]
*****  link:/mule-user-guide/v/3.7/poll-schedulers[投票调度程序]
****  link:/mule-user-guide/v/3.7/request-reply-scope[请求 - 应答范围]
****  link:/mule-user-guide/v/3.7/transactional[交易]
****  link:/mule-user-guide/v/3.7/until-successful-scope[直到成功范围]
***  link:/mule-user-guide/v/3.7/transformers[变形金刚]
****  link:/mule-user-guide/v/3.7/using-transformers[使用变形金刚]
*****  link:/mule-user-guide/v/3.7/transformers-configuration-reference[变压器配置参考]
*****  link:/mule-user-guide/v/3.7/native-support-for-json[本机支持JSON]
*****  link:/mule-user-guide/v/3.7/xmlprettyprinter-transformer[XmlPrettyPrinter变压器]
****  link:/mule-user-guide/v/3.7/dataweave[DataWeave]
*****  link:/mule-user-guide/v/3.7/dataweave-reference-documentation[DataWeave参考文档]
*****  link:/mule-user-guide/v/3.7/dataweave-tutorial[DataWeave教程]
*****  link:/mule-user-guide/v/3.7/dataweave-examples[DataWeave示例]
*****  link:/mule-user-guide/v/3.7/dataweave-streaming[DataWeave流媒体]
*****  link:/mule-user-guide/v/3.7/dataweave-migrator[DataWeave Migrator工具]
****  link:/mule-user-guide/v/3.7/append-string-transformer-reference[附加字符串转换器参考]
****  link:/mule-user-guide/v/3.7/attachment-transformer-reference[附件变压器参考]
****  link:/mule-user-guide/v/3.7/expression-transformer-reference[表达式转换器参考]
****  link:/mule-user-guide/v/3.7/java-transformer-reference[Java变压器参考]
****  link:/mule-user-guide/v/3.7/object-to-xml-transformer-reference[对XML转换器参考的对象]
****  link:/mule-user-guide/v/3.7/parse-template-reference[解析模板参考]
****  link:/mule-user-guide/v/3.7/property-transformer-reference[属性变换器参考]
****  link:/mule-user-guide/v/3.7/script-transformer-reference[脚本变换器参考]
****  link:/mule-user-guide/v/3.7/session-variable-transformer-reference[会话变量变换器参考]
****  link:/mule-user-guide/v/3.7/set-payload-transformer-reference[设置有效负载变换器参考]
****  link:/mule-user-guide/v/3.7/variable-transformer-reference[流量可变变压器参考]
****  link:/mule-user-guide/v/3.7/xml-to-object-transformer-reference[XML到对象转换器参考]
****  link:/mule-user-guide/v/3.7/xslt-transformer-reference[XSLT变压器参考]
****  link:/mule-user-guide/v/3.7/custom-metadata-tab[自定义元数据标签]
****  link:/mule-user-guide/v/3.7/creating-custom-transformers[创建自定义变形金刚]
*****  link:/mule-user-guide/v/3.7/creating-flow-objects-and-transformers-using-annotations[使用注释创建流对象和变形金刚]
*****  link:/mule-user-guide/v/3.7/function-annotation[功能注释]
*****  link:/mule-user-guide/v/3.7/groovy-annotation[Groovy注释]
*****  link:/mule-user-guide/v/3.7/inboundattachments-annotation[InboundAttachments注释]
*****  link:/mule-user-guide/v/3.7/inboundheaders-annotation[InboundHeaders注解]
*****  link:/mule-user-guide/v/3.7/lookup-annotation[查找注释]
*****  link:/mule-user-guide/v/3.7/mule-annotation[骡子注释]
*****  link:/mule-user-guide/v/3.7/outboundattachments-annotation[OutboundAttachments注释]
*****  link:/mule-user-guide/v/3.7/outboundheaders-annotation[OutboundHeaders注释]
*****  link:/mule-user-guide/v/3.7/payload-annotation[有效载荷注释]
*****  link:/mule-user-guide/v/3.7/schedule-annotation[计划注释]
*****  link:/mule-user-guide/v/3.7/transformer-annotation[变压器注释]
*****  link:/mule-user-guide/v/3.7/xpath-annotation[XPath注释]
*****  link:/mule-user-guide/v/3.7/creating-custom-transformer-classes[创建自定义转换器类]
***  link:/mule-user-guide/v/3.7/improving-performance-with-the-kryo-serializer[使用Kryo串行器提高性能]
***  link:/anypoint-studio/v/5/datamapper-user-guide-and-reference[Datamapper用户指南和参考]
****  link:/anypoint-studio/v/5/datamapper-concepts[DataMapper概念]
****  link:/anypoint-studio/v/5/datamapper-visual-reference[DataMapper可视化参考]
****  link:/anypoint-studio/v/5/defining-datamapper-input-and-output-metadata[定义DataMapper输入和输出元数据]
****  link:/anypoint-studio/v/5/defining-metadata-using-edit-fields[使用编辑字段定义元数据]
****  link:/anypoint-studio/v/5/pojo-class-bindings-and-factory-classes[POJO类绑定和工厂类]
****  link:/anypoint-studio/v/5/building-a-mapping-flow-in-the-graphical-mapping-editor[在图形映射编辑器中构建映射流程]
****  link:/anypoint-studio/v/5/mapping-flow-input-and-output-properties[映射流量输入和输出属性]
****  link:/anypoint-studio/v/5/datamapper-input-error-policy-for-bad-input-data[DataMapper输入错误政策坏输入数据]
****  link:/anypoint-studio/v/5/using-datamapper-lookup-tables[使用DataMapper查找表]
****  link:/anypoint-studio/v/5/streaming-data-processing-with-datamapper[使用DataMapper处理数据流]
****  link:/anypoint-studio/v/5/updating-metadata-in-an-existing-mapping[在现有的映射中更新元数据]
****  link:/anypoint-studio/v/5/mapping-elements-inside-lists[映射列表中的元素]
****  link:/anypoint-studio/v/5/previewing-datamapper-results-on-sample-data[在示例数据上预览DataMapper结果]
****  link:/anypoint-studio/v/5/datamapper-examples[DataMapper示例]
****  link:/anypoint-studio/v/5/datamapper-supplemental-topics[DataMapper补充主题]
****  link:/anypoint-studio/v/5/choosing-mel-or-ctl2-as-scripting-engine[选择MEL或CTL2作为脚本引擎]
****  link:/anypoint-studio/v/5/datamapper-fixed-width-input-format[DataMapper固定宽度输入格式]
****  link:/anypoint-studio/v/5/datamapper-flat-to-structured-and-structured-to-flat-mapping[DataMapper平面到结构化和结构化到平面的映射]
****  link:/anypoint-studio/v/5/including-the-datamapper-plugin[包括DataMapper插件]
***  link:/mule-user-guide/v/3.7/error-handling[错误处理]
****  link:/mule-user-guide/v/3.7/catch-exception-strategy[捕捉异常策略]
****  link:/mule-user-guide/v/3.7/choice-exception-strategy[选择例外策略]
****  link:/mule-user-guide/v/3.7/reference-exception-strategy[参考例外策略]
****  link:/mule-user-guide/v/3.7/rollback-exception-strategy[回滚异常策略]
****  link:/mule-user-guide/v/3.7/exception-strategy-most-common-use-cases[异常策略最常见的用例]
***  link:/mule-user-guide/v/3.7/mule-expression-language-mel[Mule表达语言MEL]
****  link:/mule-user-guide/v/3.7/mel-cheat-sheet[MEL备忘单]
****  link:/mule-user-guide/v/3.7/mule-expression-language-basic-syntax[Mule表达式语言基本语法]
****  link:/mule-user-guide/v/3.7/mule-expression-language-examples[Mule表达语言示例]
****  link:/mule-user-guide/v/3.7/mule-expression-language-reference[Mule表达式语言参考]
*****  link:/mule-user-guide/v/3.7/mule-expression-language-date-and-time-functions[Mule表达语言日期和时间函数]
****  link:/mule-user-guide/v/3.7/mule-expression-language-tips[Mule表达语言技巧]
***  link:/mule-user-guide/v/3.7/business-events[商业活动]
***  link:/mule-user-guide/v/3.7/using-maven-with-mule[和Mule一起使用Maven]
****  link:/mule-user-guide/v/3.7/using-maven-in-mule-esb[在Mule中使用Maven]
*****  link:/mule-user-guide/v/3.7/configuring-maven-to-work-with-mule-esb[配置Maven以使用Mule ESB]
*****  link:/mule-user-guide/v/3.7/maven-tools-for-mule-esb[适用于Mule ESB的Maven工具]
*****  link:/mule-user-guide/v/3.7/mule-maven-plugin[骡Maven插件]
*****  link:/mule-user-guide/v/3.7/mule-esb-plugin-for-maven[Male的Mule ESB Plugin（已弃用）]
****  link:/mule-user-guide/v/3.7/maven-reference[Maven参考]
***  link:/mule-user-guide/v/3.7/batch-processing[批量处理]
****  link:/mule-user-guide/v/3.7/batch-filters-and-batch-commit[批量过滤器和批量提交]
****  link:/mule-user-guide/v/3.7/batch-job-instance-id[批处理作业实例ID]
****  link:/mule-user-guide/v/3.7/batch-processing-reference[批处理参考]
*****  link:/mule-user-guide/v/3.7/using-mel-with-batch-processing[使用MEL进行批处理]
****  link:/mule-user-guide/v/3.7/batch-streaming-and-job-execution[批处理流和作业执行]
****  link:/mule-user-guide/v/3.7/record-variable[记录变量]
***  link:/mule-user-guide/v/3.7/transaction-management[交易管理]
****  link:/mule-user-guide/v/3.7/single-resource-transactions[单一资源交易]
****  link:/mule-user-guide/v/3.7/multiple-resource-transactions[多资源交易]
****  link:/mule-user-guide/v/3.7/xa-transactions[XA交易]
****  link:/mule-user-guide/v/3.7/using-bitronix-to-manage-transactions[使用Bitronix管理事务]
***  link:/mule-user-guide/v/3.7/the-properties-editor[属性编辑器]
***  link:/mule-user-guide/v/3.7/adding-and-removing-user-libraries[添加和删​​除用户库]
***  link:/mule-user-guide/v/3.7/shared-resources[共享资源]
****  link:/mule-user-guide/v/3.7/setting-environment-variables[设置环境变量]
***  link:/mule-user-guide/v/3.7/mule-versus-web-application-server[Mule与Web应用程序服务器]
***  link:/mule-user-guide/v/3.7/publishing-and-consuming-apis-with-mule[使用Mule发布和使用API]
****  link:/mule-user-guide/v/3.7/publishing-a-soap-api[发布一个SOAP API]
*****  link:/mule-user-guide/v/3.7/securing-a-soap-api[保护SOAP API]
*****  link:/mule-user-guide/v/3.7/extra-cxf-component-configurations[额外的CXF组件配置]
****  link:/mule-user-guide/v/3.7/consuming-a-soap-api[使用SOAP API]
****  link:/mule-user-guide/v/3.7/publishing-a-rest-api[发布REST API]
****  link:/mule-user-guide/v/3.7/consuming-a-rest-api[使用REST API]
*****  link:/mule-user-guide/v/3.7/rest-api-examples[REST API示例]
***  link:/mule-user-guide/v/3.7/advanced-usage-of-mule-esb[Mule ESB的高级用法]
****  link:/mule-user-guide/v/3.7/storing-objects-in-the-registry[将对象存储在注册表中]
****  link:/mule-user-guide/v/3.7/unifying-the-mule-registry[统一骡注册表]
****  link:/mule-user-guide/v/3.7/object-scopes[对象范围]
****  link:/mule-user-guide/v/3.7/using-mule-with-spring[春天使用骡子]
*****  link:/mule-user-guide/v/3.7/sending-and-receiving-mule-events-in-spring[在春季发送和接收Mule事件]
*****  link:/mule-user-guide/v/3.7/spring-application-contexts[Spring应用程序上下文]
*****  link:/mule-user-guide/v/3.7/using-spring-beans-as-flow-components[使用Spring Beans作为流程组件]
****  link:/mule-user-guide/v/3.7/dependency-injection[依赖注入]
****  link:/mule-user-guide/v/3.7/configuring-properties[配置属性]
****  link:/mule-user-guide/v/3.7/creating-and-managing-a-cluster-manually[手动创建和管理群集]
****  link:/mule-user-guide/v/3.7/distributed-file-polling[分布式文件轮询]
****  link:/mule-user-guide/v/3.7/distributed-locking[分布式锁定]
****  link:/mule-user-guide/v/3.7/streaming[流]
****  link:/mule-user-guide/v/3.7/about-configuration-builders[关于配置建造者]
****  link:/mule-user-guide/v/3.7/internationalizing-strings[国际化字符串]
****  link:/mule-user-guide/v/3.7/bootstrapping-the-registry[引导注册表]
****  link:/mule-user-guide/v/3.7/tuning-performance[调整性能]
****  link:/mule-user-guide/v/3.7/mule-agents[骡代理]
*****  link:/mule-user-guide/v/3.7/agent-security-disabled-weak-ciphers[代理安全：禁用弱密码]
*****  link:/mule-user-guide/v/3.7/jmx-management[JMX管理]
****  link:/mule-user-guide/v/3.7/flow-references[流量参考]
*****  link:/mule-user-guide/v/3.7/flow-processing-strategies[流程处理策略]
****  link:/mule-user-guide/v/3.2/reliability-patterns[可靠性模式]
****  link:/mule-user-guide/v/3.7/mule-object-stores[骡子对象商店]
****  link:/mule-user-guide/v/3.7/configuring-reconnection-strategies[配置重新连接策略]
****  link:/mule-user-guide/v/3.7/using-the-mule-client[使用Mule客户端]
****  link:/mule-user-guide/v/3.7/using-web-services[使用Web服务]
*****  link:/mule-user-guide/v/3.7/proxying-web-services[代理Web服务]
*****  link:/mule-user-guide/v/3.7/using-.net-web-services-with-mule[与Mule一起使用.NET Web服务]
****  link:/mule-user-guide/v/3.7/passing-additional-arguments-to-the-jvm-to-control-mule[将附加参数传递给JVM以控制Mule]
**  link:/mule-user-guide/v/3.7/securing[保护]
***  link:/mule-user-guide/v/3.7/anypoint-enterprise-security[Anypoint企业安全]
****  link:/mule-user-guide/v/3.7/installing-anypoint-enterprise-security[安装Anypoint Enterprise Security]
****  link:/mule-user-guide/v/3.7/mule-secure-token-service[Mule安全令牌服务]
*****  link:/mule-user-guide/v/3.7/creating-an-oauth-2.0-web-service-provider[创建一个Oauth 2.0 Web服务提供程序]
*****  link:/mule-user-guide/v/3.7/authorization-grant-types[授权授予类型]
****  link:/mule-user-guide/v/3.7/mule-credentials-vault[Mule证书库]
****  link:/mule-user-guide/v/3.7/mule-message-encryption-processor[Mule消息加密处理器]
*****  link:/mule-user-guide/v/3.7/pgp-encrypter[PGP加密器]
****  link:/mule-user-guide/v/3.7/mule-digital-signature-processor[Mule数字签名处理器]
****  link:/mule-user-guide/v/3.7/anypoint-filter-processor[Anypoint滤波器处理器]
****  link:/mule-user-guide/v/3.7/mule-crc32-processor[Mule CRC32处理器]
****  link:/mule-user-guide/v/3.7/anypoint-enterprise-security-example-application[Anypoint企业安全示例应用程序]
****  link:/mule-user-guide/v/3.7/mule-sts-oauth-2.0-example-application[Mule STS Oauth 2.0示例应用程序]
***  link:/mule-user-guide/v/3.7/configuring-security[配置安全性]
****  link:/mule-user-guide/v/3.7/configuring-the-spring-security-manager[配置Spring Security Manager]
****  link:/mule-user-guide/v/3.7/component-authorization-using-spring-security[使用Spring Security的组件授权]
****  link:/mule-user-guide/v/3.7/setting-up-ldap-provider-for-spring-security[为Spring Security设置LDAP提供程序]
****  link:/mule-user-guide/v/3.7/upgrading-from-acegi-to-spring-security[从Acegi升级到Spring Security]
****  link:/mule-user-guide/v/3.7/encryption-strategies[加密策略]
****  link:/mule-user-guide/v/3.7/pgp-security[PGP安全]
****  link:/mule-user-guide/v/3.7/jaas-security[Jaas安全]
****  link:/mule-user-guide/v/3.7/saml-module[SAML模块]
***  link:/mule-user-guide/v/3.7/fips-140-2-compliance-support[FIPS 140-2合规性支持]
**  link:/mule-user-guide/v/3.7/debugging[调试]
***  link:/mule-user-guide/v/3.7/configuring-mule-stacktraces[配置Mule Stacktraces]
***  link:/mule-user-guide/v/3.7/debugging-outside-studio[在Studio外进行调试]
***  link:/mule-user-guide/v/3.7/logging[记录]
**  link:/mule-user-guide/v/3.7/testing[测试]
***  link:/mule-user-guide/v/3.7/introduction-to-testing-mule[测试骡简介]
***  link:/mule-user-guide/v/3.7/unit-testing[单元测试]
***  link:/mule-user-guide/v/3.7/functional-testing[功能测试]
***  link:/mule-user-guide/v/3.7/testing-strategies[测试策略]
**  link:/mule-user-guide/v/3.7/deploying[部署]
***  link:/mule-user-guide/v/3.7/starting-and-stopping-mule-esb[启动和停止Mule ESB]
***  link:/mule-user-guide/v/3.7/deployment-scenarios[部署方案]
****  link:/mule-user-guide/v/3.7/choosing-the-right-clustering-topology[选择正确的群集拓扑]
****  link:/mule-user-guide/v/3.7/embedding-mule-in-a-java-application-or-webapp[将Mule嵌入到Java应用程序或Web应用程序中]
****  link:/mule-user-guide/v/3.7/deploying-mule-to-jboss[部署Mule到JBoss]
*****  link:/mule-user-guide/v/3.7/mule-as-mbean[作为MBean的骡子]
****  link:/mule-user-guide/v/3.7/deploying-mule-to-weblogic[将Mule部署到WebLogic]
****  link:/mule-user-guide/v/3.7/deploying-mule-to-websphere[将Mule部署到WebSphere]
****  link:/mule-user-guide/v/3.7/deploying-mule-as-a-service-to-tomcat[将Mule作为服务部署到Tomcat]
****  link:/mule-user-guide/v/3.7/application-server-based-hot-deployment[基于应用服务器的热部署]
****  link:/mule-user-guide/v/3.7/classloader-control-in-mule[Mule中的类加载器控制]
*****  link:/mule-user-guide/v/3.7/fine-grain-classloader-control[细粒级加载器控制]
***  link:/mule-user-guide/v/3.7/deploying-to-multiple-environments[部署到多个环境]
***  link:/mule-user-guide/v/3.7/mule-high-availability-ha-clusters[Mule高可用性HA集群]
****  link:/mule-user-guide/v/3.7/evaluating-mule-high-availability-clusters-demo[评估Mule高可用性集群演示]
*****  link:/mule-user-guide/v/3.7/1-installing-the-demo-bundle[1  - 安装演示软件包]
*****  link:/mule-user-guide/v/3.7/2-creating-a-cluster[2  - 创建一个群集]
*****  link:/mule-user-guide/v/3.7/3-deploying-an-application[3  - 部署应用程序]
*****  link:/mule-user-guide/v/3.7/4-applying-load-to-the-cluster[4  - 将加载应用于群集]
*****  link:/mule-user-guide/v/3.7/5-witnessing-failover[5  - 见证故障转移]
*****  link:/mule-user-guide/v/3.7/6-troubleshooting-and-next-steps[6  - 故障排除和后续步骤]
***  link:/mule-user-guide/v/3.7/mule-deployment-model[Mule部署模型]
****  link:/mule-user-guide/v/3.7/hot-deployment[热部署]
****  link:/mule-user-guide/v/3.7/application-deployment[应用程序部署]
****  link:/mule-user-guide/v/3.7/application-format[申请格式]
****  link:/mule-user-guide/v/3.7/mule-application-deployment-descriptor[Mule应用程序部署描述符]
*****  link:/mule-user-guide/v/3.7/application-plugin-format[应用程序插件格式]
***  link:/mule-user-guide/v/3.7/mule-server-notifications[Mule服务器通知]
***  link:/mule-user-guide/v/3.7/profiling-mule[剖析Mule]
***  link:/mule-user-guide/v/3.7/hardening-your-mule-installation[加强你的骡子安装]
***  link:/mule-user-guide/v/3.7/configuring-mule-for-different-deployment-scenarios[针对不同的部署方案配置Mule]
****  link:/mule-user-guide/v/3.7/configuring-mule-as-a-linux-or-unix-daemon[将Mule配置为Linux或Unix守护进程]
****  link:/mule-user-guide/v/3.7/configuring-mule-as-a-windows-service[将Mule配置为Windows服务]
****  link:/mule-user-guide/v/3.7/configuring-mule-to-run-from-a-script[配置Mule从脚本运行]
***  link:/mule-user-guide/v/3.7/preparing-a-gitignore-file[准备一个gitignore文件]
**  link:/mule-user-guide/v/3.7/extending[扩展]
***  link:/mule-user-guide/v/3.7/extending-components[扩展组件]
***  link:/mule-user-guide/v/3.7/custom-message-processors[自定义消息处理器]
***  link:/mule-user-guide/v/3.7/creating-example-archetypes[创建示例原型]
***  link:/mule-user-guide/v/3.7/creating-a-custom-xml-namespace[创建一个自定义的XML命名空间]
***  link:/mule-user-guide/v/3.7/creating-module-archetypes[创建模块原型]
***  link:/mule-user-guide/v/3.7/creating-project-archetypes[创建项目原型]
***  link:/mule-user-guide/v/3.7/creating-transports[创建传输]
****  link:/mule-user-guide/v/3.7/transport-archetype[运输原型]
****  link:/mule-user-guide/v/3.7/transport-service-descriptors[运输服务描述符]
***  link:/mule-user-guide/v/3.7/creating-custom-routers[创建自定义路由器]
**  link:/mule-user-guide/v/3.7/reference[参考]
***  link:/mule-user-guide/v/3.7/team-development-with-mule[与Mule合作开发团队]
****  link:/mule-user-guide/v/3.7/modularizing-your-configuration-files-for-team-development[模块化您的配置文件以进行团队开发]
****  link:/mule-user-guide/v/3.7/using-side-by-side-configuration-files[使用并行配置文件]
****  link:/mule-user-guide/v/3.7/using-modules-in-your-application[在应用程序中使用模块]
****  link:/mule-user-guide/v/3.7/sharing-custom-code[共享自定义代码]
****  link:/mule-user-guide/v/3.7/sharing-custom-configuration-fragments[共享自定义配置片段]
****  link:/mule-user-guide/v/3.7/sharing-applications[共享应用程序]
****  link:/mule-user-guide/v/3.7/sustainable-software-development-practices-with-mule[可持续软件开发实践与Mule]
*****  link:/mule-user-guide/v/3.7/reproducible-builds[可复制的版本]
*****  link:/mule-user-guide/v/3.7/continuous-integration[持续集成]
****  link:/mule-user-guide/v/3.7/understanding-mule-configuration[了解骡子配置]
*****  link:/mule-user-guide/v/3.7/about-the-xml-configuration-file[关于XML配置文件]
*****  link:/mule-user-guide/v/3.7/using-flows-for-service-orchestration[使用流进行服务编排]
*****  link:/mule-user-guide/v/3.7/about-mule-configuration[关于Mule配置]
*****  link:/mule-user-guide/v/3.7/understanding-enterprise-integration-patterns-using-mule[使用Mule了解企业集成模式]
*****  link:/mule-user-guide/v/3.7/understanding-orchestration-using-mule[了解使用Mule的编排]
*****  link:/mule-user-guide/v/3.7/connecting-with-transports-and-connectors[连接运输和连接器]
*****  link:/mule-user-guide/v/3.7/using-mule-with-web-services[在Web服务中使用Mule]
***  link:/mule-user-guide/v/3.7/general-configuration-reference[一般配置参考]
****  link:/mule-user-guide/v/3.7/bpm-configuration-reference[BPM配置参考]
****  link:/mule-user-guide/v/3.7/component-configuration-reference[组件配置参考]
****  link:/mule-user-guide/v/3.7/endpoint-configuration-reference[端点配置参考]
*****  link:/mule-user-guide/v/3.7/mule-endpoint-uris[Mule端点URI]
****  link:/mule-user-guide/v/3.7/exception-strategy-configuration-reference[例外策略配置参考]
****  link:/mule-user-guide/v/3.7/filters-configuration-reference[过滤器配置参考]
****  link:/mule-user-guide/v/3.7/global-settings-configuration-reference[全局设置配置参考]
****  link:/mule-user-guide/v/3.7/notifications-configuration-reference[通知配置参考]
****  link:/mule-user-guide/v/3.7/properties-configuration-reference[属性配置参考]
****  link:/mule-user-guide/v/3.7/security-manager-configuration-reference[安全管理器配置参考]
****  link:/mule-user-guide/v/3.7/transactions-configuration-reference[事务配置参考]
***  link:/mule-user-guide/v/3.7/transports-reference[传输参考]
****  link:/mule-user-guide/v/3.7/connecting-using-transports[使用传输连接]
*****  link:/mule-user-guide/v/3.7/configuring-a-transport[配置传输]
****  link:/mule-user-guide/v/3.7/ajax-transport-reference[AJAX传输参考]
****  link:/mule-user-guide/v/3.7/ejb-transport-reference[EJB传输参考]
****  link:/mule-user-guide/v/3.7/email-transport-reference[电子邮件传输参考]
****  link:/mule-user-guide/v/3.7/file-transport-reference[文件传输参考]
****  link:/mule-user-guide/v/3.7/ftp-transport-reference[FTP传输参考]
****  link:/mule-user-guide/v/3.7/deprecated-http-transport-reference[HTTP传输参考]
****  link:/mule-user-guide/v/3.7/https-transport-reference[HTTPS传输参考]
****  link:/mule-user-guide/v/3.7/imap-transport-reference[IMAP传输参考]
****  link:/mule-user-guide/v/3.7/jdbc-transport-reference[JDBC传输参考]
****  link:/mule-user-guide/v/3.7/jetty-transport-reference[码头运输参考]
*****  link:/mule-user-guide/v/3.7/jetty-ssl-transport[Jetty SSL Transport]
****  link:/mule-user-guide/v/3.7/jms-transport-reference[JMS传输参考]
*****  link:/mule-user-guide/v/3.7/activemq-integration[ActiveMQ集成]
*****  link:/mule-user-guide/v/3.7/hornetq-integration[HornetQ集成]
*****  link:/mule-user-guide/v/3.7/open-mq-integration[打开MQ集成]
*****  link:/mule-user-guide/v/3.7/solace-jms[Solace JMS]
*****  link:/mule-user-guide/v/3.7/tibco-ems-integration[Tibco EMS集成]
****  link:/mule-user-guide/v/3.7/multicast-transport-reference[多播传输参考]
****  link:/mule-user-guide/v/3.7/pop3-transport-reference[POP3传输参考]
****  link:/mule-user-guide/v/3.7/quartz-transport-reference[石英运输参考]
****  link:/mule-user-guide/v/3.7/rmi-transport-reference[RMI传输参考]
****  link:/mule-user-guide/v/3.7/servlet-transport-reference[Servlet传输参考]
****  link:/mule-user-guide/v/3.7/sftp-transport-reference[SFTP传输参考]
****  link:/mule-user-guide/v/3.7/smtp-transport-reference[SMTP传输参考]
****  link:/mule-user-guide/v/3.7/ssl-and-tls-transports-reference[SSL和TLS传输参考]
****  link:/mule-user-guide/v/3.7/stdio-transport-reference[STDIO传输参考]
****  link:/mule-user-guide/v/3.7/tcp-transport-reference[TCP传输参考]
****  link:/mule-user-guide/v/3.7/udp-transport-reference[UDP传输参考]
****  link:/mule-user-guide/v/3.7/vm-transport-reference[VM传输参考]
****  link:/mule-user-guide/v/3.7/mule-wmq-transport-reference[Mule WMQ运输参考]
****  link:/mule-user-guide/v/3.7/wsdl-connectors[WSDL连接器]
****  link:/mule-user-guide/v/3.7/xmpp-transport-reference[XMPP传输参考]
***  link:/mule-user-guide/v/3.7/modules-reference[模块参考]
****  link:/mule-user-guide/v/3.7/object-store-module-reference[对象存储模块参考]
****  link:/mule-user-guide/v/3.7/atom-module-reference[Atom模块参考]
****  link:/mule-user-guide/v/3.7/bpm-module-reference[BPM模块参考]
*****  link:/mule-user-guide/v/3.7/drools-module-reference[Drools模块参考]
*****  link:/mule-user-guide/v/3.7/jboss-jbpm-module-reference[JBoss jBPM模块参考]
****  link:/mule-user-guide/v/3.7/cxf-module-reference[CXF模块参考]
*****  link:/mule-user-guide/v/3.7/cxf-module-overview[CXF模块概述]
*****  link:/mule-user-guide/v/3.7/building-web-services-with-cxf[使用CXF构建Web服务]
*****  link:/mule-user-guide/v/3.7/consuming-web-services-with-cxf[使用CXF消费Web服务]
*****  link:/mule-user-guide/v/3.7/enabling-ws-addressing[启用WS-Addressing]
*****  link:/mule-user-guide/v/3.7/enabling-ws-security[启用WS-Security]
*****  link:/mule-user-guide/v/3.7/cxf-error-handling[CXF错误处理]
*****  link:/mule-user-guide/v/3.7/proxying-web-services-with-cxf[使用CXF代理Web服务]
*****  link:/mule-user-guide/v/3.7/supported-web-service-standards[支持的Web服务标准]
*****  link:/mule-user-guide/v/3.7/using-a-web-service-client-directly[直接使用Web服务客户端]
*****  link:/mule-user-guide/v/3.7/using-http-get-requests[使用HTTP GET请求]
*****  link:/mule-user-guide/v/3.7/using-mtom[使用MTOM]
*****  link:/mule-user-guide/v/3.7/cxf-module-configuration-reference[CXF模块配置参考]
****  link:/mule-user-guide/v/3.7/data-bindings-reference[数据绑定参考]
****  link:/mule-user-guide/v/3.7/jaas-module-reference[JAAS模块参考]
****  link:/mule-user-guide/v/3.7/jboss-transaction-manager-reference[JBoss事务管理器参考]
****  link:/mule-user-guide/v/3.7/jersey-module-reference[泽西模块参考]
****  link:/mule-user-guide/v/3.7/json-module-reference[JSON模块参考]
****  link:/mule-user-guide/v/3.7/rss-module-reference[RSS模块参考]
****  link:/mule-user-guide/v/3.7/scripting-module-reference[脚本模块参考]
****  link:/mule-user-guide/v/3.7/spring-extras-module-reference[Spring Extras模块参考]
****  link:/mule-user-guide/v/3.7/sxc-module-reference[SXC模块参考]
****  link:/mule-user-guide/v/3.7/xml-module-reference[XML模块参考]
*****  link:/mule-user-guide/v/3.7/domtoxml-transformer[DomToXml变压器]
*****  link:/mule-user-guide/v/3.7/jaxb-bindings[JAXB绑定]
*****  link:/mule-user-guide/v/3.7/jaxb-transformers[JAXB变形金刚]
*****  link:/mule-user-guide/v/3.7/jxpath-extractor-transformer[JXPath提取变压器]
*****  link:/mule-user-guide/v/3.7/xml-namespaces[XML命名空间]
*****  link:/mule-user-guide/v/3.7/xmlobject-transformers[XmlObject变形金刚]
*****  link:/mule-user-guide/v/3.7/xmltoxmlstreamreader-transformer[XmlToXMLStreamReader变换器]
*****  link:/mule-user-guide/v/3.7/xquery-support[XQuery支持]
*****  link:/mule-user-guide/v/3.7/xquery-transformer[XQuery变换器]
*****  link:/mule-user-guide/v/3.7/xslt-transformer[XSLT变压器]
*****  link:/mule-user-guide/v/3.7/xpath-extractor-transformer[XPath提取变压器]
*****  link:/mule-user-guide/v/3.7/xpath[XPath的]
***  link:/mule-user-guide/v/3.7/non-mel-expressions-configuration-reference[非MEL表达式配置参考]
****  link:/mule-user-guide/v/3.7/using-non-mel-expressions[使用非MEL表达式]
***  link:/mule-user-guide/v/3.7/creating-non-mel-expression-evaluators[创建非MEL表达式评估器]
***  link:/mule-user-guide/v/3.7/schema-documentation[模式文档]
****  link:/mule-user-guide/v/3.7/notes-on-mule-3.0-schema-changes[关于Mule 3.0模式更改的注意事项]
***  link:/mule-user-guide/v/3.7/mule-esb-3-and-test-api-javadoc[Mule ESB 3和测试API Javadoc]
***  link:/mule-user-guide/v/3.7/mulesoft-security-update-policy[MuleSoft安全更新政策]
